libapache2-mod-perl2 (2.0.5-1) UNRELEASED; urgency=low

  [ Nicholas Bamber ]
  TODO:
  - DEB_BUILD_OPTIONS=noopt needs:
        1) $(CFLAGS) inserted in MP_CCFLAFS, and
        2) patch the build system so that MP_CCFLAGS is used *after*
           the default optimization flags (otherwise it is overriden by
           the defaults)
  - Still checking broken links in dwww
  - Check dependencies

  * Added myself to Uploaders
  * Upped debian compatibility level to 7, migrated to source format '3.0
    (quilt)' and removed quilt cruft
  * Refreshed debian/rules
  * Upped standards version to 3.9.1
  * Added versioning of depdendency between dev and core packages
  * Registered documents with doc-base
    - Adding todo files to doc package
    - Added dwww as a recommendation to doc package
    - Transformed .pod files to indexed HTML files
    - Copied .png files and added them to the HTML index
  * New upstream release
  * Reviewed patches
    - Removed 009_allow_parallel_build.patch [applied upstream]
    - Removed 100-svn-XSS-Status.patch [applied upstream]
    - Removed 110-Fix-two-uninitialized-....patch [applied upstream]
    - Removed 035-testrequest_add_credentials.patch [applied upstream]
  * Added patch to remove generated files
  * Email change: Andres Salomon -> dilinger@debian.org
  * Refreshed copyright

  [ Damyan Ivanov ]
  * add avoid-db-linkage.patch: avoids needless linking with libdb, which
    entangles us in libdb transitions. Closes: #621415

 -- Nicholas Bamber <nicholas@periapt.co.uk>  Tue, 22 Mar 2011 14:19:58 +0000

libapache2-mod-perl2 (2.0.4-7) unstable; urgency=low

  * change source Section to 'httpd'
  * add a patch from Niko Tyni avoiding two warnings about use of uninitialized
    values, which break tests under Perl 5.12. (Closes: #578481)
  * add a patch fixinf spelling errors in POD and other documentation
  * add a patch fixinng POD errors
  * add a patch fixing bad manpage whatis name
  * Standards-Version: 3.8.4