@@ -1,9 +1,16 @@
 #!/usr/bin/make -f
 
-TMP  := $(CURDIR)/debian/libapache2-mod-perl2
+PACKAGE = $(firstword $(shell dh_listpackages))
+TMP     = $(CURDIR)/debian/$(PACKAGE)
 
 %:
 	dh $@
+
+# Allow disabling build optimation by setting noopt in
+# DEB_BUILD_OPTIONS
+# (dpkg-buildflags already honours DEB_BUILD_OPTIONS)
+CFLAGS := $(shell dpkg-buildflags --get CFLAGS) -Wall
+export CFLAGS
 
 override_dh_auto_configure:
 	dh_auto_configure -- \
@@ -12,15 +19,16 @@ override_dh_auto_configure:
 		MP_TRACE=0 \
 		MP_USE_DSO=1 \
 		MP_USE_STATIC=0 \
-		MP_CCOPTS="-g -Wall" \
+		MP_CCOPTS="$(CFLAGS)" \
 		MP_INCLUDE_DIR=/usr/include/apache2 \
 		MP_APXS=/usr/bin/apxs2 \
-		MP_INCLUDE_DIR=/usr/include/apr-1.0 
+		MP_INCLUDE_DIR=/usr/include/apr-1.0 \
+		OPTIMIZE="$(CFLAGS)"
 
 override_dh_auto_test:
 	APACHE_TEST_EXTRA_ARGS="-httpd_conf /etc/apache2/apache2.conf"
 		LANG=C \
-		dh_auto_test 
+		dh_auto_test
 
 override_dh_clean:
 	dh_clean
